--- a/src/Modules/Product/Product.css
+++ b/src/Modules/Product/Product.css
@@ -1,3 +1,21 @@
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 @media screen and (max-width: 427px) and (min-width: 1px) {
   #fdc {
     flex-direction: column;
